# brainless_embedding_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  openapi.json  pyproject.toml
.github/workflows/: build-image.yml
actions/: openapi.py  preload.py
app/: config.py  dependencies.py  main.py  schemas.py
app/routers/: embeddings.py  predictions.py  reranking.py
core/: config.py
routes/: embeddings.py  predictions.py
schemas/: embedding.py
